--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Language</title>
+    <title>Ib-Translator</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-neutral-900 text-slate-100 p-4 md:p-8"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
